# ocaml-rust-experimentation

./: .gitignore  .ocamlformat  Cargo.toml  README.md
.github/workflows/: build.yml
src/: bench.ml  caml_c_stubs.c  dune  main.ml  stubs.ml  stubs_c.ml  stubs_rust.ml
src/stubs/: Cargo.toml
src/stubs/src/: lib.rs
src/stubs_rust/: Cargo.toml
src/stubs_rust/src/: lib.rs
